--- a/SignatureGenerator.html
+++ b/SignatureGenerator.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>548 Foundation Email Signature</title>
     <style>
-        body { font-family: 'Montserrat', sans-serif; }
+        h1 { font-family: 'Montserrat', sans-serif; font-weight: 800;}
+        h2 { font-family: 'Montserrat', sans-serif; font-weight: 400;}
+        p { font-family: 'Montserrat', sans-serif; font-weight: 400;}
         .container { width: 650px; height: 150px; margin: auto; text-align: center; }
         input { width: 500px; padding: 8px; margin: 5px; font-family: 'Montserrat', sans-serif; font-size: 14px; }
         .vertical-line { opacity: 0.5; width: 2px; background: #372B73; height: 125px; }
@@ -131,7 +133,7 @@
                                 </p>
                             </td>
                             
-                            <td style="width: 330px; text-align: left; padding-left: 15px; font-size: 11px; font-weight: 500;">
+                            <td style="width: 330px; text-align: left; padding-left: 15px; font-size: 11px;">
                                 <p style="padding-top: 10px; padding-bottom: 10px; margin: 0;">
                                     <a href="tel:${phone}" style="text-decoration: none; color: #372B73;">${phone}</a>
                                 </p>
