Fixed length issue

--- a/SignatureGenerator.html
+++ b/SignatureGenerator.html
@@ -121,7 +121,7 @@
                       <td><a href="https://548foundation.org/"><img src="${companyLogo}" alt="Company Logo" style="width: 140px; padding: 10px;"></a></td>
                       <td><div class="vertical-line"></div></td>
                       <td style="padding: 0px; height: 130px;">
-                        <table style="padding: 0px; padding-left: 20px; padding-right: 20px;">
+                        <table style="padding: 0px; padding-left: 20px; padding-right: 20px; width: 475px;">
                           <tr>
                             <td colspan="5" style="padding: 0px; text-align: left; color: #372B73;">
                                 <h1 style="height: 34px; margin: 0; font-size: 26px; font-weight: 800;">${name}</h1>
@@ -129,7 +129,7 @@
                             </td>
                           </tr>
                           <tr>
-                            <td style="position: relative; max-width: 90px; height: 90px;">
+                            <td style="position: relative; width: 90px; height: 90px;">
                                 <img src="${profile}" alt="Profile" style="width: 70px; height: 70px; border-radius: 50%; z-index: 1; position: relative; border: 5px solid #372B73;">
                             </td>
                             <td align="left" style="padding-left: 20px; max-width: 300px; margin: 0px;  font-size: 12px; font-weight: 500;">
