Font issues fixed

--- a/SignatureGenerator.html
+++ b/SignatureGenerator.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>548 Foundation Email Signature</title>
     <style>
-        body { font-family: 'arial', sans-serif; border-radius: 5px; border-bottom: #372B73; }
+        body { font-family: 'Montserrat', sans-serif; border-radius: 5px; border-bottom: #372B73; }
         .container { width: 650px; height: 150px; margin: auto; text-align: center; }
         input { width: 500px; padding: 8px; margin: 5px; font-family: 'Montserrat', sans-serif; font-size: 14px; }
         .vertical-line { opacity: 0.5; width: 2px; background: #372B73; height: 125px; }
@@ -124,15 +124,15 @@
                         <table style="padding: 0px; padding-left: 20px; padding-right: 20px; width: 475px;">
                           <tr>
                             <td colspan="5" style="padding: 0px; text-align: left; color: #372B73;">
-                                <h1 style="height: 34px; margin: 0; font-size: 26px; font-weight: 800;">${name}</h1>
-                                <h2 style="height: 14px; margin: 0; font-size: 13.5px; font-weight: 400;">${title}</h2>
+                                <h1 style="font-family: 'arial black', sans-serif; height: 34px; margin: 0; font-size: 26px; font-weight: 800;">${name}</h1>
+                                <h2 style="font-family: 'tahoma', sans-serif; height: 14px; margin: 0; font-size: 13.5px; font-weight: 400;">${title}</h2>
                             </td>
                           </tr>
                           <tr>
                             <td style="position: relative; width: 90px; height: 90px;">
                                 <img src="${profile}" alt="Profile" style="width: 70px; height: 70px; border-radius: 50%; z-index: 1; position: relative; border: 5px solid #372B73;">
                             </td>
-                            <td align="left" style="padding-left: 20px; max-width: 300px; margin: 0px;  font-size: 12px; font-weight: 500;">
+                            <td align="left" style="font-family: 'tahoma', sans-serif; padding-left: 20px; max-width: 300px; margin: 0px;  font-size: 12px; font-weight: 500;">
                                 ${contantInfo}
                             </td>
                           </tr>
